syntax = "proto3";

option java_multiple_files = true;

package com.globallogic.grpc;

import "com/globallogic/user.proto";

service UserService {
    rpc createUser (CreateUserRequest) returns (CreateUserResponse);
    rpc getUserById(GetUserByIdRequest) returns(GetUserByIdResponse);
    rpc authenticateUserCredentials (AuthenticateRequest) returns (AuthenticateResponse);
}

message CreateUserRequest {
    int32  user_id=1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string contact = 5;
    string password = 6;
    Gender gender=7;
}

message CreateUserResponse {
    User user = 1;
}

message  GetUserByIdRequest{
    int32 user_id=1;
}
message GetUserByIdResponse{
    User user=1;
}
message AuthenticateRequest {
    string user_name = 1;
    string password = 2;
}

message AuthenticateResponse {
    string message = 1;
}